fix: fixed some styles and image size

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <section class="intro">
         <div class="column">
           <h3>Maksim Stankevich</h3>			
-          <img class="face" src="images/803142.png" alt="Maksim Stankevich face"/>
+          <img class="face" src="assets/images/803142.png" alt="Maksim Stankevich face"/>
         </div>
         <div class="column">
           <p>
@@ -100,9 +100,9 @@
       <section>
         <h4>Several works:</h4>
         <div id="gallery" class="gallery">          
-        <figure>
-          <a href="images/whitefashion.png">
-            <img class="cards" src="images/whitefashion.png" alt="whitefashion" width="600px" height="375px" />
+        <figure class="card">
+          <a href="assets/images/whitefashion.png">
+            <img class="card-image" src="assets/images/whitefashion.png" alt="whitefashion"/>
           </a>            
           <figcaption>
             <h4>whitefashion.by</h4>
@@ -110,9 +110,9 @@
             <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>	
           </figcaption>
         </figure>
-        <figure>
-          <a href="images/kapchikov.png">
-            <img class="cards" src="images/kapchikov.png" alt="kapchikov" width="600px" height="375px"/>
+        <figure class="card">
+          <a href="assets/images/kapchikov.png">
+            <img class="card-image" src="assets/images/kapchikov.png" alt="kapchikov"/>
           </a>
           <figcaption>
             <h4>kapchikov.by</h4>
@@ -120,9 +120,9 @@
               <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </figcaption>
         </figure>
-        <figure>
-          <a href="images/pz104orbit.png">
-            <img src="images/pz104orbit.png" alt="pz104orbit" width="600px" height="375px" class="cards"/>
+        <figure class="card">
+          <a href="assets/images/pz104orbit.png">
+            <img src="assets/images/pz104orbit.png" alt="pz104orbit" class="card-image"/>
           </a>
           <figcaption>
             <h4>pz104orbit.com</h4>
@@ -130,9 +130,9 @@
               <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </figcaption>
         </figure>
-        <figure>
-          <a href="images/smartbalance.png">
-            <img src="images/smartbalance.png" alt="smartbalance" width="600px" height="375px" class="cards"/>
+        <figure class="card">
+          <a href="assets/images/smartbalance.png">
+            <img src="assets/images/smartbalance.png" alt="smartbalance" class="card-image"/>
           </a>
           <figcaption>
           <h4>smartbalance.online</h4>
